site/styles/_buttons.scss
.btn {
  border-radius: 4px;
  font-family: $font-family-base;
}

.btn-primary {
  background-color: $button-background;
  color: $button-text-color;
  font-weight: $font-weight-normal;
  @include hover-focus {
    background-color: $button-background-hover;
    border-color: $button-background-hover;
    color: $button-text-color-hover;
  }
}

.btn.btn-signin {
  align-items: center;
  background-color: $signin-background;
  border: 3px solid $signin-border-color;
  color: $signin-text-color;
  display: flex;
  font-size: 14px;
  justify-content: center;
  @include hover-focus {
    background: $signin-background-hover;
    border: 3px solid $signin-border-color-hover;
    color: var(--body-color);
  }
  @include media-breakpoint-up(lg) {
    background-color: $signin-background-lg;
    @include hover-focus {
      background: $signin-background-hover-lg;
      color: $signin-text-color-hover;
    }
  }
  @include media-breakpoint-up(xl) {
    font-size: 16px;
  }
}

.btn.btn-signin-primary,
.btn.btn-signup {
  align-items: center;
  background-color: $signup-background;
  border: 3px solid $signup-border-color;
  color: $signup-text-color;
  display: flex;
  font-size: 14px;
  justify-content: center;
  margin-left: 12px;
  white-space: initial;
  @include media-breakpoint-up(xl) {
    font-size: 16px;
  }
  @include hover-focus {
    background-color: $signup-background-hover;
    color: $signup-text-color-hover;
  }
}

.s72-btn-play {
  @extend .d-flex;
  align-items: center;
  background: $button-background;
  border: 3px solid $button-background;
  justify-content: center;
  padding-bottom: 3px;
  padding-left: 0;
  padding-top: 3px;
  @include hover-focus {
    background: $button-background-hover;
    border: 3px solid $button-background-hover;

    .s72-icon-play {
      circle {
        fill: none;
        stroke: none;
      }

      path {
        fill: $button-text-color-hover;
        stroke: $button-text-color-hover;
      }
    }

    .s72-btn-play-label {
      color: $button-text-color-hover;
    }
  }

  .s72-icon-play {
    circle {
      fill: none;
      stroke: none;
    }

    path {
      fill: $button-text-color;
      stroke: $button-text-color;
    }
  }

  .verb {
    color: $button-text-color;
    font-size: 18px;
    font-weight: $font-weight-normal;
  }
}

.s72-btn-play.s72-btn-trailer {
  background: transparent;
  border: 0 none;
  @include hover-focus {
    background: transparent;

    .s72-icon-play circle {
      fill: var(--primary);
      stroke: var(--primary);
      stroke-width: 3px;
    }

    .s72-icon-play path {
      fill: #000;
      stroke: #000;
    }
  }

  &.s72-btn-trailer {
    background: transparent;
    border: 0 none;

    @include media-breakpoint-up(md) {
      margin-right: 10px;
    }

    .verb {
      background: transparent;
      color: var(--primary);
    }
  }

  .verb {
    color: $trailer-button-text-color;
  }

  .s72-btn-play-icon {
    display: inline-block;
    height: 32px;
    margin-right: 0;
    width: 32px;

    circle {
      fill: transparent;
      stroke: var(--primary);
      stroke-width: 3px;
    }

    path {
      fill: var(--body-color);
      stroke: var(--body-color);
    }
  }

  .s72-btn-play-label {
    background: transparent;
    border-width: 0;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
    font-size: 12px;
    font-weight: $font-weight-bold;
    margin-left: 0;
    padding-bottom: 0;
    padding-left: 8px;
    padding-top: 0;

    &::before {
      display: none;
    }
  }
}

.s72-btn-rent,
.s72-btn-purchase {
  background: $button-background;
  border: 3px solid $button-background;
  min-width: 140px;
  @include hover-focus {
    background: $button-background-hover;
    border-color: $button-background-hover;
    color: $button-text-color-hover;
  }

  .verb {
    font-weight: $font-weight-normal;
  }

  .price {
    font-weight: $font-weight-normal;
  }
}

.btn-wishlist {
  p {
    margin: 0;
  }

  .btn-wishlist-quick {
    left: 10px;
    position: absolute;
    top: 0;
    // One more than the availability label
    z-index: 100;
  }

  .s72-btn-wishlist {
    background: transparent;
    border: 0 none;
    color: var(--body-color);
    font-size: 14px;

    .s72-icon-loading,
    .s72-icon-errored {
      display: none;
    }
  }

  .s72-icon {
    font-size: 16px !important;
    margin-left: 0;
    margin-right: 5px;
  }
}

.btn-block .s72-btn {
  @extend .btn-block;
}

.btn-light {
  background-color: $gray-300;
  border-color: $gray-300;
  @include hover-focus {
    background-color: $gray-200;
    border-color: $gray-200;
  }
}

s72-donate-button:not(:empty) {
   &:hover a {
    background-color: $button-background-hover;
    color: $button-text-color-hover;
    /* stylelint-disable selector-max-compound-selectors */
    svg {
      g {
        fill: $button-text-color-hover;
      }
    }
    /* stylelint-enable selector-max-compound-selectors */
  }
  a {
    color: $button-text-color;
    background-color: $button-background;
  }
  svg {
    g {
      fill: $button-text-color;
    }
  }
}

